# libkdtree

./: .gitignore  AUTHORS  COPYING  Doxyfile.in  Makefile.am  README.md  configure.ac  mainpage.h
doc/html/: annotated.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  index.html  kdtree_8h.html  kdtree__cartesian_8c.html  kdtree__common_8c.html  kdtree__spherical_8c.html  pqueue_8c.html  structkdNode.html  structkd__thread__data.html  structpqueue.html  structresItem.html  test__cartesian__nn_8c.html  test__spherical__nn_8c.html
doc/latex/: annotated.tex  doxygen.sty  files.tex  index.tex  kdtree_8h.tex  kdtree__cartesian_8c.tex  kdtree__common_8c.tex  kdtree__spherical_8c.tex  pqueue_8c.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  structkdNode.tex  structkd__thread__data.tex  structpqueue.tex  structresItem.tex  test__cartesian__nn_8c.tex  test__spherical__nn_8c.tex
lib/: COPYING.DJ  Makefile.in  kdtree.h  kdtree_cartesian.c  kdtree_common.c  kdtree_spherical.c  qsort.c
lib/.svn/: all-wcprops  dir-prop-base  entries
lib/.svn/text-base/: Makefile.am.svn-base  pmergesort.c.svn-base  pqueue.c.svn-base  pqueue.h.svn-base
src/: example_cartesian.c
src/.svn/: all-wcprops  dir-prop-base  entries
src/.svn/text-base/: Makefile.am.svn-base  example_spherical.c.svn-base
src/.svn/tmp/: tempfile.2.tmp  tempfile.tmp
tests/: create_pointlist.c  naive_ortRangeSearch.c  naive_sph_ortRangeSearch.c  sorted_queues_eq.c  test_cartesian_nn.c  test_cartesian_nn.sh  test_cartesian_range.c  test_spherical_qnearest.c  test_spherical_rectangle.c  unsorted_queues_eq.c
tests/.svn/: all-wcprops  dir-prop-base  entries
(+17 files in other folders)
